<resources>
    <string name="app_name">SpeedyBuy</string>
    <string name="ic_powered_by_text">Powered by\nSonu coding</string>
    <string name="backround_image_discription">backround</string>
    <string name="ic_explore_the_app">Explore the app</string>
    <string name="Lorem">Discover a vast array of incredible products and exclusive deals catered to your tastes and needs. Explore a world of possibilities and find exactly what you\'re looking for, from the latest trends to timeless classics.</string>
    <string name="lets_start">Lets Start</string>
    <string name="login_text">Login</string>
    <string name="welcome_users">Welcome Users</string>
    <string name="app_first_name">Speedy</string>
    <string name="buy">Buy</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="sign_up_text">Or sign up with</string>
    <string name="email_hints">Email id</string>
    <string name="not_register_yet">Not register yet ?</string>
    <string name="create_account">Create Account</string>
    <string name="password">Password</string>
    <string name="Edit_enter_password">Enter Your Password</string>
    <string name="example_123gmail_com">example@123gmail.com</string>
    <string name="default_web_client_id">952695631712-7g941driadhf57jmk2rsos171oiogoam.apps.googleusercontent.com</string>
    <string name="home">Home</string>
    <string name="wishlist">Wishlist</string>
    <string name="shop">Cart</string>
    <string name="search">Search</string>
    <string name="setting">Setting</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_description">Mens Starry Sky Printed Shirt 100% Cotton Fabric</string>
    <string name="price">₹399</string>
    <string name="product">Product</string>
    <string name="heading">Mens Starry</string>
    <string name="log_out_btn">Log out</string>
    <string name="email_example">santosh975635@gmail.com</string>
    <string name="headiing_email">Email Address</string>
    <string name="user_name">santosh</string>
    <string name="headind_name">Name</string>
    <string name="personal_details">Personal Details</string>
    <string name="splash_logo">splash_logo</string>
    <string name="M">M</string>
    <string name="L">L</string>
    <string name="XL">XL</string>
    <string name="XXL">XXL</string>
    <string name="size_uk">Size:</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="buy_now">Buy now</string>
    <string name="beauty">Beauty</string>
    <string name="fashion">Fashion</string>
    <string name="mens">Mens</string>
    <string name="accessories">Accs</string>
    <string name="kids">Kids</string>
    <string name="ethnic_sets">Ethnic Sets</string>
    <string name="suggested_for_you">Suggested for You</string>
    <string name="time_22h_55m_20s_remaining">22h 55m 20s remaining</string>
    <string name="deal_of_the_day">Deal of the Day</string>
    <string name="view_all">View all</string>
    <string name="trending_products">Trending Products</string>
    <string name="last_date">Last Date 29/04/24</string>
    <string name="summer_sale">summer_sale</string>
    <string name="best_deal_for_kids">Best deal for kids</string>
    <string name="accessories_full">Accessories</string>
    <string name="banner_summer_sale">banner_summer_sale</string>
    <string name="sponsored">Sponsored</string>
    <string name="up_to_80_off">up to 80% Off</string>
    <string name="summer_25_collections">Summer’ 25 Collections</string>
    <string name="new_arrivals">New Arrivals</string>
    <string name="qty_1">Qty 1</string>
    <string name="delivery_date">Delivery by sat Apr 27 |</string>
    <string name="delivery_type">FREE Delivery</string>
    <string name="remove">remove</string>
    <string name="go_to_cart">Go to cart</string>
    <string name="empty_cart_img">empty_cart_img</string>
    <string name="your_cart_is_empty">Your cart is empty!</string>
    <string name="price_2_items">Price (2 items)</string>
    <string name="price_details">Price Details</string>
    <string name="buy_more_amp_save_more"><![CDATA[Buy more & save more]]></string>
    <string name="dis_price">- ₹20</string>
    <string name="extra_dis">- ₹50</string>
    <string name="discount">Discount</string>
    <string name="delivery_charges">Delivery Charges</string>
    <string name="your_wishlisht_is_empty">Your wishlist is empty!</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_up">sign up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="continue_for">Continue</string>
    <string name="find_your_account">Find your account</string>
    <string name="enter_your_email_address">Enter your email address.</string>
    <string name="dialog_title">Enter an email </string>
    <string name="dialog_body">You\'ll need to enter an email address to continue.</string>
    <string name="dialog_positive_button">try again</string>
    <string name="dialog_title_link">Link send successfully!</string>
    <string name="dialog_subtitle_link">check your mailbox to reset your password</string>
    <string name="dialog_positive_button_link">OK</string>
    <string name="dialog_login_fail_title">Unable to log in</string>
    <string name="dialog_login_fail_sub_title">An unexpected error occurred.Please try logging in again</string>
    <string name="channel_name">Event Info</string>
    <string name="default_notification_channel_id">Event</string>
</resources>