<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/cart_recycler_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linear_layout_of_intent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/cart_image_view"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_margin="10dp"
                    android:contentDescription="@string/product"
                    android:src="@drawable/items_images" />

                <LinearLayout
                    android:layout_width="70dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:background="@drawable/shape_for_qty">

                    <TextView
                        android:id="@+id/cart_qty_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp"
                        android:text="@string/qty_1"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.AppCompatSpinner
                        android:id="@+id/spinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/cart_heading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/text_description"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/cart_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/size_uk"
                    android:textSize="11sp" />

                <RatingBar
                    android:id="@+id/cart_rating_bar"
                    style="@android:style/Widget.DeviceDefault.Light.RatingBar.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:isIndicator="true"
                    android:numStars="5"
                    android:progressTint="@color/rating_bar"
                    android:rating="3.5" />

                <TextView
                    android:id="@+id/cart_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginTop="10dp"
                    android:text="@string/price"
                    android:textSize="15sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/cart_delivery_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="3dp"
                android:text="@string/delivery_date" />

            <TextView
                android:id="@+id/cart_delivery_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="3dp"
                android:text="@string/delivery_type"
                android:textColor="@color/rating_bar"
                android:textStyle="bold" />
        </LinearLayout>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:dividerColor="@color/dividerColor"
            app:dividerThickness="1dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cart_delete_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_delete"
            android:drawablePadding="5dp"
            android:text="@string/remove"
            android:textSize="12sp" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:dividerColor="@color/dividerColor"
            app:dividerThickness="5dp" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/layout_of_item_empty_image_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <ImageView
            android:id="@+id/image_empty_cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:contentDescription="@string/empty_cart_img"
            android:src="@drawable/cart_empty" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="450dp"
            android:text="@string/your_cart_is_empty"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>
</RelativeLayout>